app section mobile fix

--- a/css/style.css
+++ b/css/style.css
@@ -1368,6 +1368,7 @@ html {
 @media only screen and (max-width: 37.5em) {
   .card__imgbox {
     width: 327px;
+    height: 320px;
   }
 }
 .card__img {
@@ -1444,6 +1445,12 @@ html {
   .card__content-box {
     height: 310px;
     width: 350px;
+  }
+}
+@media only screen and (max-width: 37.5em) {
+  .card__content-box {
+    width: 100%;
+    height: 158px;
   }
 }
 .card__text {
